[project]
name = "precut-counter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "discord (>=2.3.2,<3.0.0)",
    "tqdm (>=4.68.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
